# canvas-programmatic-api-docs

./: .coverage  .fridayrules  .gitignore  README.md  README_POSTMAN_COLLECTION.md  canvas-api-postman.py  canvas_lms_api_resources.md  create_postman_collection.py  generate_openapi.py  generate_sdk.py  get_api_docs_in_markdown.py  justfile  mkdocs.yml  parse_canvas_markdown.py  pyproject.toml  pytest.ini  test_collection.py
canvas_api_resources/: access_tokens.md  account_calendars.md  account_domain_lookups.md  account_notifications.md  account_reports.md  accounts.md  accounts_-lti.md  admins.md  analytics.md  announcement_external_feeds.md  announcements.md  api_token_scopes.md  appointment_groups.md  assignment_extensions.md  assignment_groups.md  assignments.md  authentication_providers.md  authentications_log.md  blackout_dates.md  block_editor_template.md  blueprint_courses.md  bookmarks.md  brand_configs.md  calendar_events.md  canvas_career_experiences.md  collaborations.md  comm_messages.md  communication_channels.md  conferences.md  content_exports.md  content_migrations.md  content_security_policy_settings.md  content_shares.md  conversations.md  course_audit_log.md  course_pace.md  course_quiz_extensions.md  course_reports.md  courses.md  custom_gradebook_columns.md  (+88 more)
canvas_openapi/: builder.py  generator.py
docs/: cli_reference.md  development.md  index.md  installation.md  openapi.md  python_sdk.md  usage.md
output/: canvas_api.openapi.json  canvas_api.openapi.yaml  canvas_api.postman_collection.json
sdk/: README.md  pyproject.toml
(+2024 files in other folders)
