[project]
name = "canvas-api-postman-master"
version = "0.1.0"
description = "Generate comprehensive Postman collections from Canvas API documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.7",
    "python-slugify>=8.0.4",
    "pydantic>=2.9.0",
    "genson>=1.3.0",
    "openapi-schema-pydantic>=1.2.4",
    "ruamel.yaml>=0.18.0",
    "openapi-python-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pytest",
    "pytest-cov",
    "requests-mock",
    "freezegun",
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
    "requests-mock",
    "freezegun",
    "ruff",
]

[tool.setuptools]
py-modules = [
    "create_postman_collection",
    "get_api_docs_in_markdown", 
    "parse_canvas_markdown",
    "test_collection"
]
